\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.8-5}{
  \itemize{
    \item Fix error in survfit_confint that showed up in a CRAN test
    (simple typo, but led to an error message).
    \item Add a stronger test case for the data.frame option of
    summary.survfit and fix the errors it uncovered (github issue
    305). The return for data.frame=TRUE has been changed to include the
    values from newdata rather than the row numbers of newdata.
    That is, for survfit from a coxph fit, if newdata had age=c(50,60)
    and sex=0:1, then the resuling data.frame will have age and sex
    variables rather than data=1 or 2.
    \item Add suggested text wrt to the actions of subset to the help files
    for coxph, survreg, and survfit. This parallels changes in lm and
    glm, see github issue 324.
}}
\section{Changes in version 3.8-4}{
  \itemize{
    \item The rmean option for print.survfit for a single and multi
    state model were not in harmony when start.time was present. The
    former added start.time to the result, the second not.  Make them
    agree (don't add it).
    \item Fix error in stacker (called by coxph) that only arose if
    there were shared strata that differ in both starting and ending
    state.  A rare case, but it arises with curves for TD covariates.
    \item Add the lvcf and nostutter functions, both useful when
    creating certain multistate data sets.
    \item Deprecate the type="mstate" option of Surv; a factor variable
    for 'status' is the better option.
    \item Add code to ignore the robust option to coxph for a penalized
    model; this combination makes no sense (to me) and does not appear in
    any examples. However, to my dismay a user pointed that in the
    current code this did not outright fail, and instead produces
    *something* that is returned as a purported variance.  (Is is a
    sensible idea? I'm curious, but someone else will need to
    answer the question.)